Agrego cambios de trato de cookies